--- a/src/styles/aboutus-gallery.scss
+++ b/src/styles/aboutus-gallery.scss
@@ -48,7 +48,7 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .abs {
-    margin-bottom: 18rem;
+    margin-bottom: 20rem;
 
     &-main {
       height: 20rem;
